将python模块进行分割实现，加入input_data模块数据修改查询