@@ -3,6 +3,7 @@ package edu.bjtu.kgbridge.controller;
 import edu.bjtu.kgbridge.enums.ResultCodeEnum;
 import edu.bjtu.kgbridge.model.Result;
 import edu.bjtu.kgbridge.service.OWLGraphService;
+import edu.bjtu.kgbridge.util.FileUtil;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -33,8 +34,12 @@ import java.util.stream.Stream;
 @Tag(name = "OWLGraphController", description = "OWL图谱生成接口")
 public class OWLGraphController {
 
-    private static final Path BASE_DIR = Paths.get(System.getProperty("user.dir"), "python-service");
-    private static final Path OWL_DIR = BASE_DIR.resolve("ontology_files");
+    private static final Path OWL_DIR = Path.of(
+            System.getProperty("user.dir"),
+            "python-service",
+            "ontology_files"
+    );
+
     private final OWLGraphService owlGraphService;
 
     public OWLGraphController(OWLGraphService owlGraphService) {
@@ -42,7 +47,7 @@ public class OWLGraphController {
     }
 
     @Operation(summary = "生成并返回OWL图谱", description = "根据上传的OWL文件名生成并返回OWL图谱")
-    @PostMapping("/generateGraph")
+    @GetMapping("/generateGraph")
     public ResponseEntity<byte[]> generateGraph(
             @Parameter(description = "IFC模型文件名称", required = true) @RequestParam("fileName") String fileName
     ) {
@@ -68,20 +73,6 @@ public class OWLGraphController {
     @Operation(summary = "列出owl图谱文件", description = "列出服务器上已经生成的owl图谱文件")
     @GetMapping("/list")
     public Result<List<String>> listFiles() {
-        if (!Files.exists(OWL_DIR) || !Files.isDirectory(OWL_DIR)) {
-            return Result.fail(ResultCodeEnum.NOT_FOUND, "Directory not found");
-        }
-
-        try (Stream<Path> paths = Files.list(OWL_DIR)) {
-            List<String> fileNames = paths
-                    .filter(path -> path.toString().toLowerCase().endsWith(".owl"))
-                    .map(Path::getFileName)
-                    .map(Path::toString)
-                    .collect(Collectors.toList());
-
-            return Result.success(fileNames);
-        } catch (IOException e) {
-            return Result.fail(ResultCodeEnum.SERVER_ERROR, "Could not list files");
-        }
+        return new FileUtil(OWL_DIR).listFiles(".owl");
     }
 }
